[project]
name = "atlanta vpn"
version = "0.1.0"
description = ""
authors = [
    {name = "uran-content",email = "uran.content@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiocryptopay (>=0.4.7,<0.5.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
